refactor: replace String-based HTTP methods with HttpMethod enum and add TestPlan entity for managing scan configurations